Cliente, equipo y ticket ok

--- a/app/views/equipos/index.html.erb
+++ b/app/views/equipos/index.html.erb
@@ -10,7 +10,7 @@
       <th>Ram</th>
       <th>Hd</th>
       <th>Cliente</th>
-	  <th colspan="3">Acciones</th>
+	  <th colspan="5">Acciones</th>
     </tr>
   </thead>
 
@@ -26,6 +26,8 @@
         <td><%= equipo.cliente.nombre %></td>
 		<td><%= link_to 'Mostrar detalle', cliente_equipo_path(@cliente, equipo) %></td>
 		<td><%= link_to 'Editar equipo', edit_cliente_equipo_path(@cliente, equipo) %></td>
+		<td><%= link_to 'Nuevo reporte',  new_cliente_equipo_ticket_path(@cliente, equipo) %></td>
+		<td><%= link_to 'Reportes de este equipo',  cliente_equipo_tickets_path(@cliente, equipo) %></td>
 		<td><%= link_to 'Eliminar', cliente_equipo_path(@cliente, equipo), method: :delete, data: { confirm: '¿Está seguro?' } %></td>
       </tr>
     <% end %>
