Se agregan funciones para listado de tickets abiertos o cerrados

--- a/app/views/tickets/edit.html.erb
+++ b/app/views/tickets/edit.html.erb
@@ -16,9 +16,16 @@
 
  
   <div class="field">
+    <%= f.label :abierto %><br>
+    <%= f.check_box :abierto %>
+  </div>
+  
+  <div class="field">
     <%= f.label :desc_corta %><br>
     <%= f.text_field :desc_corta %>
   </div>
+  
+  
   <div class="field">
     <%= f.label :detalles %><br>
     <%= f.text_field :detalles %>
