--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Nuevo reporte</h1>
+<h1>Nuevo reporte del equipo ?</h1>
 <%= params.inspect %>
 <%= form_for(@ticket) do |f| %>
   <% if @ticket.errors.any? %>
