--- a/app/views/tickets/edit.html.erb
+++ b/app/views/tickets/edit.html.erb
@@ -38,4 +38,4 @@
   </div>
 <% end %>
 
-<%= link_to 'Regresar a reportes de este equipo', cliente_equipo_tickets_path %>
+<%= link_to 'Regresar a reportes de este equipo', equipo_tickets_path %>
